# slack-semaphore

./: README.md
slack_semaphore/: pyproject.toml
slack_semaphore/src/: main.py
slack_semaphore/src/static/: index.html
