[tool.poetry]
name = "slack-semaphore"
version = "0.1.0"
description = ""
authors = ["Cutwell"]
readme = "README.md"
packages = [{include = "slack_semaphore"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
asyncio = "^3.4.3"
uvicorn = "^0.29.0"
pync = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
